[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blaze-scanner"
version = "2.2.0"
description = "Smart Directory Bruteforce Engine with WAF detection, tech fingerprinting, and adaptive filtering"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["security", "pentesting", "directory-bruteforce", "web-scanner", "fuzzer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
fast = ["uvloop>=0.19.0; platform_system != 'Windows'"]
headless = ["playwright>=1.40.0"]
all = [
    "uvloop>=0.19.0; platform_system != 'Windows'",
    "playwright>=1.40.0",
]

[project.scripts]
blaze = "blaze:cli_entry"

[tool.setuptools]
packages = ["core", "tools"]
py-modules = ["blaze"]

[tool.setuptools.package-data]
"*" = ["wordlists/*.txt", "config.json", "signatures/*.json"]
